fixed overlapping x axis in bar chart and dropdown size also

--- a/development/user_interface/src/app/shared/components/filter-panel/filter-panel.component.scss
+++ b/development/user_interface/src/app/shared/components/filter-panel/filter-panel.component.scss
@@ -17,6 +17,13 @@
 }
 
 ::ng-deep {
+    .ng-has-value .ng-placeholder, .ng-select-opened .ng-placeholder{
+        position:absolute !important;
+    }
+
+    .ng-placeholder{
+        position: relative !important;
+    }
     .ng-select{
         overflow: visible !important;
     }
